# wild

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  new_update.md  pubspec.yaml  settings.json
.fvm/: flutter_sdk  fvm_config.json
.github/workflows/: release.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  methods.dart
lib/cubits/: api_host_cubit.dart  articlelist_cubit.dart  auto_scroll_cubit.dart  category_cubit.dart  reader_background_cubit.dart  recommend_cubit.dart  screen_keep_on.dart  toplist_cubit.dart  (+3 more)
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: cache_manager.rs  downloading.rs  frb_generated.rs  lib.rs  test.rs
rust/src/api/: database.rs  mod.rs  system.rs  wenku8.rs
rust/src/database/: mod.rs
rust/src/database/entities/: mod.rs
rust/src/database/entities/active/: chapter_cache.rs  image_cache.rs  mod.rs  novel_download.rs  novel_download_chapter.rs  novel_download_picture.rs  novel_download_volume.rs  reading_history.rs  search_history.rs  sign_log.rs  web_cache.rs
rust/src/database/entities/cookie/: cookie.rs  cookie_store.rs  mod.rs
rust/src/database/entities/cookie/migrations/: m000001_create_table_cookies.rs  mod.rs
rust/src/database/entities/properties/: mod.rs  property.rs
rust/src/wenku8/: client.rs  mod.rs  models.rs
rust/test_data/database/: active.db  properties.db
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+144 files in other folders)
