[package]
name = "rust_lib_wild"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
reqwest = { version = "0.12.15", features = ["cookies", "gzip", "h2", "rustls-tls", "rustls-tls-native-roots", "socks", "stream", "zstd"], default-features = false }
anyhow = "1.0"
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
encoding_rs = "0.8"
bytes = "1.10.1"
once_cell = "1.19"
sea-orm = { version = "1.1.11", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
sea-orm-migration = { version = "1.1.11", features = ["runtime-tokio-rustls", "sqlx-sqlite"], default-features = false }
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
cookie = "0.18.1"
rand = "0.9.1"
regex = "1.11.1"
image = "0.24"
md5 = "0.7"
hex = "0.4.3"
url = "2.5.4"
base64 = "0.22.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
serde_json = "1.0.140"
